# System-PM

./: README.md  README_TAURI.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/init/: ACCEPTANCE_init.md  ACCEPTANCE_iteration_1.md  ALIGNMENT_init.md  ALIGNMENT_iteration_1.md  CONSENSUS_init.md  DESIGN_init.md  DESIGN_iteration_1.md  FINAL_init.md  FINAL_iteration_1.md  TASK_init.md  TASK_iteration_1.md
docs/tauri_migration/: ALIGNMENT_tauri_migration.md  DESIGN_tauri_migration.md  TASK_tauri_migration.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: MainLayout.tsx
src/components/common/: SystemSelector.tsx
src/components/dashboard/: QuickCheckWidget.tsx
src/components/systems/: SystemCard.tsx
src/components/timeline/: PlanRow.tsx  ResourceRow.tsx  TimelineHeader.tsx  TimelineView.tsx  constants.ts
src/pages/: Dashboard.tsx  Plans.tsx  Systems.tsx
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: conflictEngine.ts  mockData.ts
