[package]
name = "system-pm"
version = "0.0.0"
description = "System PM Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.6", features = [] }
tauri-plugin-opener = "2.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
